--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/ueokande/leave-office#readme",
   "devDependencies": {
-    "electron": "^1.4.15"
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.23.0",
+    "electron": "^1.4.15",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
