--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.23.0",
     "electron": "^1.4.15",
+    "material-design-lite": "^1.3.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
