--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main/index.js",
   "scripts": {
     "start": "electron .",
+    "eslint": "eslint renderer/**/*.{js,jsx} main/**/*.{js.jsx}",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
