--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
   },
   "extends": ["eslint:all", "plugin:react/all"],
   "rules": {
+    "arrow-body-style": "off",
     "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
     "id-length": "off",
     "indent": ["error", 2],
@@ -30,12 +31,15 @@
     "quote-props": ["error", "as-needed"],
     "sort-imports": "off",
     "sort-keys": "off",
+    "sort-vars": "off",
     "space-before-function-paren": ["error", "never"],
     "react/require-optimization": "warn",
     "react/jsx-indent": ["error", 2],
+    "react/jsx-indent-props": ["error", 2],
     "react/jsx-max-props-per-line": "off",
     "react/jsx-no-bind": ["error", {
       "ignoreRefs": true
-    }]
+    }],
+    "react/jsx-sort-props": "off"
   }
 }
